# env-craft

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/: README.md  context-resolution.md  deploy-inject.md  future-migration.md  generate.md  github-app.md  init.md  link.md  list.md  mental-model.md  pull.md  reveal.md  set.md  upgrade.md  zero-to-deploy.md
scripts/: install-from-github.sh
src/: bootstrap.rs  cli.rs  config.rs  fs_sec.rs  github.rs  github_app.rs  lib.rs  main.rs  naming.rs  schema.rs  secrets.rs  session.rs  ui.rs  upgrade.rs
