[package]
name = "envcraft"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
dirs = "6.0.0"
dryoc = "0.7.0"
flate2 = "1.1.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tar = "0.4.44"
thiserror = "2.0.17"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"
